--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,9 +1,9 @@
 .home-page {
   .text-zone {
     position: absolute;
-    left: 38%;
-    top: 18%;
-    transform: translate(-50%);
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
     width: 40%;
     max-height: 90%;
   }
@@ -11,30 +11,32 @@
     color: #fff;
     font-size: 53px;
     margin: 0;
-    font-family: 'coolvetica';
+    font-family: 'Coolvetica';
     font-weight: 400;
-    &::before {
+
+    &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
-      font-size: 10px;
+      font-size: 18px;
       position: absolute;
       margin-top: -40px;
-      left: 18px;
+      left: 50px;
       opacity: 0.6;
-      animation: fadeIn 1s 1.7s backwards;
     }
-    &::after {
+
+    &:after {
       content: '<h1/>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
-      font-size: 10px;
-      position: absolute;
+      font-size: 18px;
+      position: relative;
       margin-top: 18px;
-      margin-left: 20px;
-      animation: fadeIn 1s 1.7s backwards;
+      left: 20px;
       opacity: 0.6;
+      animation: fadeIn 1s 1.7s backwards;
     }
+
     img {
       width: 32px;
       margin-left: 20px;
@@ -43,32 +45,32 @@
       animation: rotateIn 1s linear both;
       animation-delay: 1.4s;
     }
-    .A {
-      transform: rotate(360 deg);
-    }
   }
+
   h2 {
     color: #8d8d8d;
     margin-top: 20px;
     font-weight: 400;
     font-size: 11px;
-    font-family: serif;
+    font-family: sans-serif;
     letter-spacing: 3px;
     animation: fadeIn 1s 1.8s backwards;
   }
+
   .flat-button {
     color: #ffd700;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
-    font-family: serif;
+    font-family: sans-serif;
     text-decoration: none;
-    padding: 10px 18px;
+    padding: 10px 10px;
     border: 1px solid #ffd700;
     margin-top: 25px;
     float: left;
     animation: fadeIn 1s 1.8s backwards;
-    white-space: nowrap;
+    white-space: nowra;
+
     &:hover {
       background: #ffd700;
       color: #333;
