--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -1,7 +1,7 @@
 .nav-bar {
   background: #181818;
   width: 60px;
-  height: 100%;
+  height: 101%;
   position: absolute;
   top: 0;
   z-index: 3;
@@ -14,7 +14,8 @@
     img {
       display: block;
       margin: 8px auto;
-      width: 54px;
+      width: 24px;
+      height: auto;
 
       &.sub-logo {
         width: 50px;
@@ -25,6 +26,7 @@
     display: block;
     text-align: center;
     position: absolute;
+    height: 100%;
     top: 50%;
     margin-top: -120px;
     width: 100%;
@@ -49,7 +51,7 @@
           opacity: 0;
         }
 
-        &::after {
+        &:after {
           opacity: 1;
         }
       }
@@ -105,8 +107,9 @@
         display: block;
         font-size: 15px;
         line-height: 16px;
-        
-        &:hover svg{
+        color: #4d4d4e;
+
+        &:hover svg {
           color: #ffd700;
         }
       }
