--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+  font: 300 11px/1.4 'Helvetica Neue',
     sans-serif;
   color: #444;
   background: #022c43;
