--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -39,11 +39,12 @@
   animation-delay: 1s;
 }
 
-.about-page {
+.about-page,
+.contact-page {
   .text-zone {
     position: absolute;
     left: 10%;
-    top: 50;
+    top: 50%;
     transform: translateY(-50%);
     width: 35%;
     vertical-align: middle;
@@ -52,7 +53,7 @@
 
     h1 {
       font-size: 53px;
-      font-family: 'colvateica';
+      font-family: 'Coolvetica';
       color: #ffd700;
       font-weight: 400;
       margin-top: 0;
@@ -62,7 +63,7 @@
 
       &::before {
         content: '<h1>';
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: 'La Belle Aurore';
         font-size: 18px;
         position: absolute;
         margin-top: -10px;
@@ -73,7 +74,7 @@
 
       &::after {
         content: '</h1>';
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: 'La Belle Aurore';
         font-size: 18px;
         position: absolute;
         left: -30px;
@@ -86,10 +87,26 @@
     p {
       font-style: 13px;
       color: #fff;
-      font-family: serif;
+      font-family: sans-serif;
       font-weight: 300;
       min-width: fit-content;
       animation: pulse 1s;
+
+      &:nth-of-type(1) {
+        animation-delay: 1.1s;
+      }
+      &:nth-of-type(2) {
+        animation-delay: 1.2s;
+      }
+      &:nth-of-type(3) {
+        animation-delay: 1.3s;
+      }
+    }
+  }
+
+  .text-animate-hover {
+    &:hover {
+      color: #fff;
     }
   }
 }
